test/typecheck/fail/non_bool_if.sail

let _ = if "test" then 1 else 2
